Add query arg changedetectionio_show_viewed in alarms iframe
